Updating doc and readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -7,127 +7,336 @@ output: github_document
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>",
-  fig.path = "man/figures/README-",
-  out.width = "100%"
+  comment = "#>"
 )
+```
 
+```{r setup, include=FALSE}
 library(rRMSAnalyzer)
 ```
 
-# Installation
+# rRMSAnalyzer: package to analyze RiboMethSeq data
 
-You can install the latest rRMSAnalyzer version on CRAN with :
+
+
+## Installation
+
+The latest version of rRMSAnalyzer package can be installed from Github with :
 
 ```{r, eval=FALSE}
-install.packages("rRMSAnalyzer")
+library(devtools)
+devtools::install_github("EPIRNAtools/rRMSAnalyzer")
 ```
 
-# Usage
+## Usage
 
 ```{r, eval = FALSE}
 library(rRMSAnalyzer)
 
-ribo <- load_ribodata("/path/to/your/csvfiles/directory/",
-              "path/to/metadata.csv",
+ribo <- load_ribodata(
+              count_path = "/path/to/your/csvfiles/directory/",
+              metadata = "path/to/metadata.csv",
               metadata_key = "filename",
               metadata_id = "samplename")
 
-#recompute c-score using window's mean instead of median.
+# Compute the c-score using different parameters,
+# including calculation of the local coverage using the mean instead of the median
 ribo <- compute_cscore(ribo, method = "mean")
 
-#Correct any technical biases with ComBat-Seq, using the library column in metadata
+# If necessary, adjust any technical biases using ComBat-Seq.
+# Here, as an example, we use the "library" column in metadata.
 ribo <- adjust_bias(ribo,"library")
 
-# Make a PCA plot and color it by biological condition (column in metadata)
-plot_PCA(ribo,"biological_condition")
+# Plot a Principal Component Analysis (PCA) whose colors depend on the "condition" column in metadata
+plot_PCA(ribo,"condition")
 ```
 
-```{r,echo=FALSE}
+## Help, bug reports and suggestions
+
+To report a bug or any suggestion to improve the package, please let us known by opening a new issue on: *github issue link coming soon!*
+
+## Acknowledgements
+
+We would like to thank all our collaborators for their advices and suggestions.
+
+## Funding
+
+This project has been funded by the French Cancer Institute (INCa, PLBIO 2019-138 MARACAS), the SIRIC Program (INCa-DGOS-Inserm_12563 LyRICAN) and Synergie Lyon Cancer Foundation.
+
+## Data
+
+### RiboClass
+
+RiboClass is the main class of the package that allows to store both the data matrices (counts and c-scores) and the associated metadata. It is automatically created when calling *load_ribodata* (see [Loading data]).
+
+It is a list containing three main elements, individually described below:
+
+1.  **Data**: a list of dataframe, containing for each sample the 5' and/or 3' read-end counts provided by the user, and the calculated c-score.
+
+2.  **Metadata**: a dataframe, containing all the information related to the samples that can be provided by the user.
+
+3.  **RNA_names**: a dataframe, reporting the names of the RNA used in Data.
+
+Some main function calls' parameters (such as the normalization method used for c-score computation) are also kept in the RiboClass object as a reminder.
+
+### Loading data
+
+Here is an example, where all *load_ribodata* parameters are shown :
+
+```{r}
 path <- system.file("extdata", package="rRMSAnalyzer")
-ribo <- load_ribodata(paste0(path,"/miniglioma"),
-                      paste0(path,"/metadata.csv"),
+
+ribo <- load_ribodata(
+                      #data & metadata files path
+                      count_path = paste0(path,"/miniglioma"),
+                      metadata = paste0(path,"/metadata.csv"),
+                      # data & metadata files separator
+                      count_sep = "\t",
+                      metadata_sep = ",",
+                      # count data parameters :
+                      count_header = FALSE,
+                      count_value = 3,
+                      count_rnaid = 1,
+                      count_pos = 2,
+                      # Metadata parameters :
                       metadata_key = "filename",
-                      metadata_id = "samplename")
+                      metadata_id = "samplename",
+                      # c-score parameters :
+                      flanking = 6,
+                      method = "median",
+                      ncores = 1)
 ```
 
-# Help, bug reports and suggestions
+### Data
 
-If you find a bug, or have a suggestion to improve the package, open a new issue on : *github issue link coming soon!*
+To use this package, the user should provide one csv file with the 5', 3' or 5'/3' read end counts resulting from RiboMethSeq data per sample. The folder structure containing the csv files is not important, as long as either the directory and its sub-directories contain the necessary csv files.
 
-# Acknowledgement
+1.  The **name of the RNA** on which the read end counting has been performed.
 
-We would like to thank
+2.  The **number of the position** on the RNA.
 
-# Funding
+3.  The **value of the read end counts** at the position.
 
-This project has been funded.
+Here is an example :
 
-# Input data
+| RNA | Position on RNA | read end count |
+|-----|-----------------|----------------|
+| 18S | 123             | 3746           |
+| 18S | 124             | 345            |
+| 18S | 125             | 324            |
+| 18S | 126             | 789            |
+| 18S | 127             | 1234           |
 
-## The RiboClass
+Note 1: it is not necessary to provide an header in the count files, because column index can be used in the function *load_ribodata*, using *count_value*, *count_rnaid* and *count_pos* parameters.
 
-The RiboClass is the object used by this package to contain both your data and metadata. It is created when calling load_ribodata (see [#quickstart](#quickstart) or loading data).
+Note 2: if no metadata is specified, rRMSAnalyzer will try to fetch any csv files in the folder specified in count_path and its subfolders.
 
-It contains three main parts :
+### Metadata
 
-1.  **Data** : a list of dataframe, containing your samples' count + calculated c-score.
+[Two columns are mandatory for the metadata dataframe:]{.underline}
 
-2.  **Metadata** : a dataframe containing all informations related to your samples.
+1.  **filename**: name of the csv file on disk containing the read end counts described above. Do not modify it unless the filename has changed on disk.
 
-3.  **RNA_names** : current and original names of your RNAs in your data.
+2.  **samplename**: rename the samples, which will be analyzed and shown on the plots. This column could be modified, as long as the sample names are unique.
 
-Other elements in the riboClass serve to keep a tab on some function calls' parameters.
+Following these two mandatory columns, provide as many columns as needed for the analysis.
 
-## GenomeCov-like Count data
+Here is an example of metadata for three samples:
 
-To use this package, you need the following columns :
++--------------+--------------+----------------------+
+| filename     | samplename   | biological condition |
+|              |              |                      |
+| (mandatory)  | (mandatory)  | (optionnal)          |
++==============+==============+======================+
+| sample1.csv  | sample 1     | condition 1          |
++--------------+--------------+----------------------+
+| sample2.csv  | sample 2     | condition 1          |
++--------------+--------------+----------------------+
+| sample3.csv  | sample 3     | condition 2          |
++--------------+--------------+----------------------+
 
-1.  The name of the RNA on which the 5'/3' end count has been done on
+Note: if no metadata are provided in load_ribodata, an empty metadata will be created with pre-completed "filename" and "samplename" columns. The "samplename" column will be identical to "filename", but can be modified by the user.
 
-2.  The position on the RNA
+Here is an example of auto-generated metadata:
 
-3.  The 5'/3' count on this position
+| filename    | samplename  |
+|-------------|-------------|
+| sample1.csv | sample1.csv |
+| sample2.csv | sample2.csv |
+| sample3.csv | sample3.csv |
 
-You can see a small example below :
+### RNA names
 
-| RNA | Position on RNA | 5'end count |
-|-----|-----------------|-------------|
-| 18S | 123             | 3746        |
-| 18S | 124             | 345         |
-| 18S | 125             | 324         |
-| 18S | 126             | 789         |
-| 18S | 127             | 1234        |
+RNA names are stored in an auto-generated dataframe when loading data. It contains two columns :
 
-(it is not necessary to have an header in your count files. You can give the column numbering if there is no header).
+1.  **original_name**: original name of each RNA (e.g NR_023363.1).
 
-The folder structure can be whatever you wish, as long as either the directory and its sub-directories contain the necessary CSV files.
+2.  **current_name**: current name of each RNA, reflecting any user's change with *rename_rna* function (see [Rename RNA]).
 
-**If you do not specify metadata, rRMSAnalyzer will try to get any CSV files.**
+This dataframe is used to keep track of the original name, which often contains NCBI's accession ID.
 
-## Metadata
+Here is an example:
 
-Only two columns are necessary for your metadata :
+| original_name    | current_name |
+|------------------|--------------|
+| NR_023363.1_5S   | 5S           |
+| NR_046235.3_5.8S | 5.8S         |
+| NR_046235.3_18S  | 18S          |
+| NR_046235.3_28S  | 28S          |
 
-1.  filename : name of the csv file on disk. **Do not modify it unless the filename has changed on disk.**
+## C-score calculation
 
-2.  samplename : sample name you want to see on your plots and analyses. You are free to modify this column, as long as your names are unique.
+### What is C-score
 
-You can then add any column in your metadata.
+The C-score corresponds to the 2'Ome level at a RNA position. The C-score represents a drop in the end read coverage at a given position compared to the environmental coverage, as described by @birkedal2014. The C-score can be of 0 (i.e., no RNA molecule is 2'Ome at the position of interest), of 1 (i.e., all the RNA molecules are 2'Ome at the position of interest) and of ]0:1[ (i.e., a mix of un-methylated and methylated RNA molecules).
 
-If you do not give any metadata in load_ribodata, an empty one will be created with filename and samplename columns pre-completed.
+Different C-scores can be determined to obtain robust estimation of 2'Ome level depending on the parameters used to compute the local coverage. In particular, the computation method and the size of the local coverage can be changed.
 
-## Import new sites annotation
+By default, the computation method of the local coverage corresponds to the **median** and the size of the local coverage corresponds to a **flanking region of** **6** (i.e., 6 nucleotides downstream the nucleotide n and 6 upstream the nucleotide n). This package offers the possibility to change these two parameters either when loading the data or during the analysis process.
 
-When you first load your data into a RiboClass, your sites are not annotated. But maybe you want to annotate some of them. You can use the [Annotations included with this package], or create your own :
+### C-score computation when loading data
 
-You need a dataframe with the following informations :
+When the function *load_ribodata* is used, a C-score is automatically computed for all genomic positions of the RNA. The C-score is computed using either the default parameters of the *load_ribodata* function or the user's parameters as followed:
 
-1.  RNA name, **matching the RNA name in your RiboClass.**
+```{r, eval=FALSE}
+load_ribodata(count.path = "/path/to/csv/",
+              metadata = "/path/to/metadata.csv",
+              # everything below is linked to c-score computation
+              flanking = 6, # flanking region size
+              method = "median", # use mean or median on flanking region's values
+              ncores = 8 # number of CPU cores to use for computation
+              )
+```
 
-2.  Position on RNA.
+### C-score computation during the analysis process
 
-3.  Name you want to give to the site.
+During the analysis, the parameters to compute the C-score can be modified using the compute_cscore function, which will automatically update the C-score in the RiboClass.
+
+In the following example, both the flanking region's size of the local coverage and the computation method have been modified:
+
+```{r,eval=FALSE}
+ribo <- compute_cscore(ribo,
+                       flanking = 4,
+                       method = "mean")
+```
+
+Note: this function will override the previous c-score of the RiboClass.
+
+## Quality control
+
+### Identification of batch effect
+
+Technical bias (i.e., batch effect) can be identified by plotting C-scores at all the genomic positions of the RNA for each sample on a PCA (see also [Visualization with PCA] for more usages).
+
+Here is an example:
+
+```{r}
+plot_PCA(ribo = ribo,
+         color_col = "run")
+```
+
+In this example, the technical replicates RNA1 and RNA2 included in library 1 and 2 respectively, are distant from each other on the PC1 axis. Moreover, the samples should not be grouped by library or batch. The following section will resolve this batch effect.
+
+### Batch effect adjustment
+
+Batch effect of RiboMethSeq data can be adjusted using the ComBat-seq method (Paraqindes et al, in preparation; @zhang2020) . The rRMSAnalyzer package includes a wrapper (adjust_bias) to perform ComBat-seq adjustment that will return a new RiboClass with adjusted read end count values and C-scores automatically recomputed with the same setup parameters.
+
+```{r}
+ribo_adjusted <- adjust_bias(ribo, batch = "run")
+```
+
+Batch effect adjustment can be verified using the plot_PCA function using the new RiboClass:
+
+```{r}
+plot_PCA(ribo_adjusted,"run")
+```
+
+After batch effect adjustment using ComBat-seq method, the two technical replicates RNA1 and RNA2 show reduced dispersion, and the samples are separated on the PCA axes independently of the library groups.
+
+## Sample manipulation
+
+### Keep or remove samples
+
+A sample subset can be easily analyzed by indicating the samples to keep or to remove. The user can thus create a new RiboClass object containing the data and metadata of the samples of interest. In both cases, only the remaining samples' metadata are kept in the RiboClass object, so no manual updating is required.
+
+Here is an example to generate a new RiboClass by keeping two samples of interest ("S1" and "S2"):
+
+```{r}
+ribo_2samples <- keep_ribo_samples(ribo_adjusted,c("S1","S2"))
+print(ribo_2samples)
+
+```
+
+Here is an example to generate a new RiboClass by removing two samples ("S1" and "S2"):
+
+```{r}
+ribo_removed_samples <- remove_ribo_samples(ribo,c("S1","S1"))
+print(ribo_removed_samples)
+```
+
+In both cases, only the remaining samples' metadata are kept in the RiboClass object. You do not need to update it by hand.
+
+## RNA annotation
+
+### RNA manipulation
+
+#### Remove RNA
+
+A RNA subset can be easily analyzed by indicating the RNA to remove. The user can thus create a new RiboClass object containing the data of the RNAs of interest, without affecting the samples' metadata.
+
+Here is an example where the RNA 5S is removed:
+
+```{r}
+ribo_adjusted <- remove_rna(ribo, rna_to_remove = "NR_023363.1_5S")
+print(ribo_adjusted)
+```
+
+#### Rename RNA
+
+Annotation of rRNA 2'Ome sites using the lists provided by this package requires the usage of specific RNA names.
+
+Here is an example to check whether the RNA names provided by the user in the RiboClass match the ones used by this package :
+
+```{r}
+data("human_methylated")
+cat("human_methylated's rna names: ", unique(human_methylated$rRNA),"\n")
+cat("ribo's rna names: ", as.character(ribo_adjusted$rna_names$current_name))
+```
+
+In this example, the names are different and need to be updated before annotation.
+
+The function rename_rna updates automatically the rRNA names that are given by rRNA size order:
+
+```{r}
+ribo_adjusted <- rename_rna(ribo_adjusted,
+                            new_names = c("5.8S", "18S", "28S")) 
+                            # from the shortest RNA in our RiboClass to the longest.
+
+```
+
+### Annotation of RNA 2'Ome sites
+
+This package computes a C-score for each genomic position of the RNAs. The C-scores of the RNA 2'Ome sites of interest are then extracted using a list of annotated sites and the annotate function.
+
+#### Annotation included: Human 2'Ome rRNA sites
+
+By default, this package includes two dataframes including the positions and the annotations of the human rRNA 2'Ome sites:
+
+-   human_methylated: a dataframe, containing the 112 known 2'Ome sites for the human rRNAs.
+
+-   human_suspected: a dataframe, containing the 17 sites that are putative 2'Ome sites for the human rRNAs, as described in the litterature.
+
+#### Customize 2'Ome sites annotations {#customize-2ome-sites-annotations}
+
+Instead of using the list of human rRNA 2'Ome sites included with this package, the user can provide its own list and annotation using the function annotate_site.
+
+A dataframe with three mandatory columns should be provided :
+
+-   **RNA name**: the name of the RNA, matching the RNA name of the RiboClass.
+
+-   **Position on RNA**: the number of the position on the RNA.
+
+-   **Nomenclature**: the name given to the site of interest.
 
 You can see an example below :
 
@@ -137,147 +346,11 @@ You can see an example below :
 | 76       | 5.8S | Gm75         |
 | 28       | 18S  | Am27         |
 
-Example of annotation in human_methylated
+### Annotate RNA sites {#annotate-sites}
 
-Other columns in your annotation table will be ignored.
+The 2'Ome sites of interest can be annotated using the annotate function with either the provided annotations or customized ones.
 
-You can annotate you sites with [Annotate sites](#annotate-sites).
-
-## Annotations included with this package
-
-This package includes two dataframes with sites annotation :
-
--   human_methylated, containing the 112 known methylation sites for Human.
-
--   human_suspected, containing the 17 sites that are possible methylation sites.
-
-You can annotate you sites with [Annotate sites](#annotate-sites).
-
-# C-score calculation
-
-## What is C-score
-
-This is a score that has been introduced by Birkedal et al. It corresponds to the 2'Ome level at a rRNA position known to be methylated. The C-score represents a drop in end read coverage at a given position compared to the environmental coverage as described by Birkedal et al, 2015. This score can have a value between **0** (never methylated) and **1** (always methylated).
-
-Two different C-score can be found in literature, depending if the authors the median or the mean of the window's values. Both are implemented in this package.
-
-## C-score computation when loading data
-
-When load_ribodata is used, a c-score is automatically computed for all positions.
-
-You can modify directly the parameters related to this computation:
-
-```{r, eval=FALSE}
-load_ribodata("/path/to/csv/",
-              "/path/to/metadata.csv",
-              # everything below is linked to c-score computation
-              flanking = 6, # window size
-              method = "median", # use mean or median on window's values
-              ncores = 8 # number of CPU cores to use for computation
-              )
-```
-
-## Update C-Score
-
-If you want to modify the how the c-score is computed and update the c-score in a RiboClass, you can use compute_cscore function.
-
-In the following example, we modify both the window's size and the computation method (mean instead of median) :
-
-```{r,eval=FALSE}
-ribo <- compute_cscore(ribo,
-                       flanking = 8,
-                       method = "mean")
-```
-
-It will return a RiboClass with the new c-score. Please note that it will override the previous c-score.
-
-# Quality control
-
-## Samples PCA for all positions
-
-We can spot a technical bias when we make a PCA of c-score for all genomic positions and color it by library (or batch).
-
-(see also [Visualization with PCA] for more usages)
-
-```{r}
-plot_PCA(ribo,"run")
-```
-
-The sample should not be grouped by library or batch. Unfortunately, this is clearly visible on PC 1. The following section will resolve this issue.
-
-## Batch effect adjustment
-
-If the sequencing has been done in several batches, a batch effect can occur. One way to remove this effect is by using ComBat-Seq adjustment. The rRMSAnalyzer package has a wrapper to use this adjustment on a RiboClass : *adjust_bias*.
-
-```{r}
-ribo_adjusted <- adjust_bias(ribo,"run")
-```
-
-This function will return a new RiboClass with adjusted count values. The c-score will be automatically recomputed using the previous parameters given.
-
-Now, if we redo the PCA, this time on our ComBat-Seq-adjusted RiboClass :
-
-```{r}
-plot_PCA(ribo_adjusted,"run")
-```
-
-The bias on PC 1 is no longer visible !
-
-## Keep or remove samples
-
-If you want to analyze only a subset of samples, you can create a new RiboClass with keep_ribo_samples. In this example, we keep only the samples "2400" and "3307" :
-
-```{r}
-ribo_2samples <- keep_ribo_samples(ribo_adjusted,c("938","2633"))
-print(ribo_2samples)
-
-```
-
-On the contrary, you can create a new RiboClass by removing some samples. Here, we remove "2400" and "3307" :
-
-```{r}
-ribo_removed_samples <- remove_ribo_samples(ribo,c("938","2633"))
-print(ribo_removed_samples)
-```
-
-in both cases, only the remaining samples' metadata are kept in the RiboClass object. You do not need to update it by hand.
-
-# Data exploration
-
-## Remove RNA
-
-You can remove a RNA among all your RiboClass' samples if it is not necessary for your analysis. Here, we do not need the 5S rRNA.
-
-```{r}
-ribo_adjusted <- remove_rna(ribo,"NR_023363.1_5S")
-print(ribo_adjusted)
-```
-
-## Rename RNA
-
-For some plots or functions, the RNA names can be important. **RNA names must match for sites annotation.**
-
-Before annotating our sites using human_methylated, let's check if our RiboClass's RNA names are the same as those in this dataset :
-
-```{r}
-cat("human_methylated's rna names :",unique(human_methylated$rRNA),"\n")
-cat("ribo's rna names :",as.character(ribo_adjusted$rna_names$current_name))
-```
-
-Our names are different ! We need to update them before annotation.
-
-**We can use rename_rna**. We give the new RNA names by size order :
-
-```{r}
-ribo_adjusted <- rename_rna(ribo_adjusted, c("5.8S","18S","28S"))
-
-```
-
-## Annotate RNA sites
-
-Among the thousands sites belonging to the rRNA, some of them are more particular than others. In our case, we are interested by 2'Ome sites in the human model.
-
-We can **annotate these sites with the included *human_methylated* dataset** :
+Here is an example with the provided human methylated annotations:
 
 ```{r}
 ribo_adjusted <- annotate_site(ribo_adjusted,
@@ -287,75 +360,101 @@ ribo_adjusted <- annotate_site(ribo_adjusted,
                                anno_value = "Nomenclature")
 ```
 
-If there is a problem with the RNA names, you should check [Rename RNA].
+Note: if an issue occurs during the annotation process, the user should check the [Rename RNA] section.
 
-This vignette has also some explanations on how to create your own sites annotation dataset with [Import new sites annotation].
+This vignette has also some explanations on how to create your own sites annotation dataset with [Customize 2'Ome sites annotations](#customize-2ome-sites-annotations).
 
-## Visualization with PCA
+## Data visualization with PCA
 
-After annotating these sites, it would be interesting to plot them. This is possible with plot_PCA function, using *only_annotated* parameter. For our example, we will also color it by biological condition :
+The function plot_PCA, which returns a ggplot, has been implemented with several parameters for more flexibility:
 
-```{r}
-plot_PCA(ribo_adjusted,
-         color_col = "condition",
-         only_annotated = T)
-```
+1.  **only_annotated**: plot samples based on the annotated RNA 2'Ome sites only to determine whether samples clustered depending on their rRNA 2'Ome profile.
 
-By default, the axes for your PCA plot are PC 1 and PC 2. **The *axes* parameter lets you choose which principal components you want to plot.** Using our previous example, we will plot this time PC 1 and PC 3 :
+Here is an example comparing samples reflecting different biological conditions based on the rRNA 2'Ome profile of the provided human_methylated list:
 
 ```{r}
 plot_PCA(ribo_adjusted,
          color_col = "condition",
-         axes = c(1,3),
-         only_annotated = T)
+         only_annotated = TRUE)
 ```
 
-If you to do more than what is given by plot_PCA, **you can return the full dudi.pca object instead of a ggplot** by setting *pca_object_only* to True :
+2.  **axes**: by default, PC1 and PC2 axes are plotted. However, the user can choose the PCA axes of interest using the "axes" parameter.
+
+```{r}
+plot_PCA(ribo_adjusted,
+         color_col = "condition",
+         axes = c(2,3), #PC2 and PC3 will be plotted
+         only_annotated = TRUE)
+```
+
+3.  **pca_object_only**: return the full dudi.pca object by setting pca_object_only to True:
 
 ```{r}
 pca <- plot_PCA(ribo_adjusted,
          color_col = "condition",
-         only_annotated = T,
-         pca_object_only = T)
+         only_annotated = TRUE,
+         pca_object_only = TRUE)
 ```
 
 ## Export data
 
-If you want to use your results outside of this package, there are two ways to export your data :
+Data can be exported as two different objects.
 
-### Export as a single matrix
+### Export as a dataframe
 
-You can use extract_data to export your data as a single dataframe
+The user can export data as a dataframe using the function extract_data.
+
+By default, it will export c-score for all the genomic RNA positions.
 
 ```{r}
 ribo_df <- extract_data(ribo_adjusted,
                         col = "cscore")
 ```
 
-This will export all positions. If you want to export only annotated positions, you can set *only_annotated* parameter to True.
+The user can export data related to the subset of annotated RNA 2'Ome sites by setting the *only_annotated* parameter to True.
 
 ```{r}
 ribo_df <- extract_data(ribo_adjusted,
                         col = "cscore",
-                        only_annotated = T)
+                        only_annotated = TRUE)
+```
+
+```{r, echo=FALSE}
+knitr::kable(ribo_df[1:10,1:4],caption = "excerpt from the output dataframe. S1, S2 and S3 are samples.")
 ```
 
 ### Export as a ggplot-ready dataframe
 
-**If you want a ggplot-ready dataframe**, you can use format_to_plot. With the RiboClass, you can add additional metadata column if necessary.
+The user can export data as a ggplot-ready dataframe using the function format_to_plot.
+
+By default, it will export c-score for all the genomic RNA positions. The user can export additional information present in the metadata by indicating the name of the column of interest. The user can export information related to the subset of annotated RNA 2'Ome sites by setting the only_annotated parameter to True.
+
+Here is an example of ggplot-ready dataframe including the C-scores of all the genomic RNA positions as well as the condition related to the particular sample of interest:
 
 ```{r}
 ggplot_table <- format_to_plot(ribo_adjusted,"condition")
-knitr::kable(ggplot_table[501:510,],caption = "excerpt from the output dataframe")
+
+```
+
+```{r,echo=FALSE}
+knitr::kable(ggplot_table[501:510,], caption = "Excerpt from the output ggplot-ready dataframe")
 ```
 
 ### Export as a dataframe by condition
 
-This export can be used to compare the mean count or c-score for each position between conditions (or other metadata).
+The user can export a dataframe compiling the mean C-scores of each position by specific conditions provided in the metadata dataframe using the mean_samples_by_conditon function.
+
+By default, it will export for all the genomic RNA positions the name of the position, the mean and sd of the C-scores. The user can also export mean and sd of read end count. The user can export information related to the subset of annotated RNA 2'Ome sites by setting the only_annotated parameter to True.
+
+Here is an example of dataframe including the mean C-scores per conditions for all the genomic RNA positions:
 
 ```{r}
-mean_tb <- mean_samples_by_conditon(ribo_adjusted,"cscore","condition")
-knitr::kable(mean_tb[501:510,],caption = "excerpt from the output dataframe")
+mean_tb <- mean_samples_by_conditon(ribo_adjusted,
+                                    value = "cscore",
+                                    metadata_condition = "condition",
+                                    only_annotated = TRUE)
 ```
 
-# Reference
+```{r,echo=FALSE}
+knitr::kable(mean_tb[1:10,],caption = "Excerpt from the output dataframe by condition")
+```
