fix a small issue in the table of content

--- a/README.Rmd
+++ b/README.Rmd
@@ -47,9 +47,9 @@ rRMSAnalyzer is an R package that provides a set of easy-to-use functions to com
   * [RNA manipulation](#rna-manipulation)
     + [Remove RNA](#remove-rna)
     + [Rename RNA](#rename-rna)
-  * [Annotation of RNA 2’Ome sites](#annotation-of-rna-2-ome-sites)
-    + [Annotation included: Human 2’Ome rRNA sites](#annotation-included--human-2-ome-rrna-sites)
-    + [Customize 2’Ome sites annotations](#customize-2-ome-sites-annotations)
+  * [Annotation of RNA 2'Ome sites](#annotation-of-rna-2ome-sites)
+    + [Annotation included: Human 2'Ome rRNA sites](#annotation-included--human-2ome-rrna-sites)
+    + [Customize 2'Ome sites annotations](#customize-2ome-sites-annotations)
   * [Annotate RNA sites](#annotate-rna-sites)
 - [Data visualization with PCA](#data-visualization-with-pca)
 - [Export data](#export-data)
